Revision history for {{$dist->name}}

{{$NEXT}}

6.000     2016-04-23 11:35:28+01:00 Europe/London (TRIAL RELEASE)
        [THIS RELEASE MIGHT BREAK YOUR BUILD]
        - Path::Class has been excised in favor of Path::Tiny, exposed as
          Dist::Zilla::Path; it will still respond to ->subdir and ->file, but
          only until Dist::Zilla v7 -- fix your plugins by then!

        - The --verbose switch to dzil is now strictly on/off.  To set
          verbosity on a per-plugin basis, use the -V switch.  Unfortunately,
          per-plugin verbosity seems to have been broken for some time, anyway.

        - The plugins [Prereq] and [AutoPrereq] and [BumpVersion] have been
          removed.  These were long deprecated.  (Don't confuse Prereq, for
          example, with the plural Prereqs, which is the correct plugin.)

        - [PkgVersion] now supports a use_package argument which will put the
          version in the package statement.  (Remember that this syntax was
          introduced in perl v5.12.0.)

5.046     2016-04-22 15:50:27+01:00 Europe/London
        - avoid using syntax that is called ambiguous on older perls

5.045     2016-04-22 11:37:13+01:00 Europe/London
        - add 'relationship' option to AutoPrereqs plugin (Karen Etheridge)
        - PrereqScanner role abstracts much of the AutoPrereqs behavior
          (thanks, Olivier Mengué!)
        - remove duplicates from the results of the :ExecFiles filefinder
        - [MakeMaker] now rejects version ranges in prereqs if eumm_version is
          not specified to be high enough (7.1101) to guarantee it can be
          handled (Karen Etheridge)
        - allow comments in an authordep specification with a version
        - make FakeReleaser a bit more of a drop-in for UploadToCPAN
          (Erik Carlsson)
        - make PkgDist preserve blank line after 'package' for PkgVersion
          (Chisel Wright)
        - add rename option to [GatherDir::Template] (Alastair McGowan-Douglas)